--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,8 @@ lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
 composeBom = "2024.04.01"
 junitJupiter = "5.8.1"
+multikCore = "0.2.2"
+multikDefault = "0.2.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -26,6 +28,8 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junitJupiter" }
+multik-core = { module = "org.jetbrains.kotlinx:multik-core", version.ref = "multikCore" }
+multik-default = { module = "org.jetbrains.kotlinx:multik-default", version.ref = "multikDefault" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
